--- a/pom.xml
+++ b/pom.xml
@@ -18,5 +18,13 @@
 			<version>3.21.0-GA</version>
 		</dependency>
 
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
+		</dependency>
+
+
 	</dependencies>
 </project>
